# nnunet

./: .gitignore  readme.md
additional_utils/: build_task_dataset_file_json.py  run_connected_components.ipynb  set_envs.sh  wandb_controller.ipynb
debugging/: nnunet_debug_entrypoint_prediction.py  nnunet_debug_entrypoint_preprocessing.py  nnunet_debug_entrypoint_training.py
nnunet/network_architecture/: generic_descriptor_UNet.py  generic_randomfield_augmentation_UNet.py
nnunet/training/dataloading/: dataset_loading_named_samples.py
nnunet/training/loss_functions/: dp_loss.py
nnunet_envv/: README.md  pyproject.toml  set_envs.sh
nnunetv2/dataset_conversion/: Dataset802_BTCV.py  convert_MSD_dataset.py
nnunetv2/ensembling/: ensemble.py
nnunetv2/evaluation/: evaluate_predictions.py  find_best_configuration.py
nnunetv2/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
nnunetv2/experiment_planning/dataset_fingerprint/: fingerprint_extractor.py
nnunetv2/inference/: data_iterators.py  predict_from_raw_data.py
nnunetv2/postprocessing/: remove_connected_components.py
nnunetv2/preprocessing/normalization/: default_normalization_schemes.py  map_channel_name_to_normalization.py
nnunetv2/run/: load_pretrained_weights.py  run_training.py
nnunetv2/tests/integration_tests/: run_integration_test_bestconfig_inference.py
nnunetv2/training/dataloading/: utils.py
nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
nnunetv2/utilities/: default_n_proc_DA.py  overlay_plots.py
(+20 files in other folders)
